--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="col-auto">
                         <label class="visually-hidden" for="autoSizingInput">Name</label>
-                        <input type="text" class="form-control" id="autoSizingInput" placeholder="Jane Doe">
+                        <input type="text" class="form-control" id="autoSizingInput" placeholder="Jonas">
                     </div>
                     <div class="col-auto">
                         <label class="visually-hidden" for="autoSizingInputGroup">Username</label>
@@ -200,10 +200,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="footer-text" style="background-color: inherit;">
-                <span style="background-color: inherit;"> &copy; 2022 Juan Carlos Monreal.</span>
-                <span style="background-color: inherit;">Todos los derechos reservados</span>
-            </div>
+           
         </div>
     </footer>
 </body>
