--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li class="nav-item"><a href="#" class="nav-link navbar-text">Education</a></li>
                     <li class="nav-item"><a href="#" class="nav-link navbar-text">News</a></li>
                     <li class="nav-item"><a href="policy.html" class="nav-link navbar-text">Regulation</a></li>
-                    <li class="nav-item"><button class="btn btn-primary">Hoax Buster</button></li>
+                    <li class="nav-item"><button class="btn btn-primary">click me</button></li>
                 </ul>
             </nav>
     
